Finish the modify of jekyll template, 2016-10-15

--- a/_posts/2016-10-14-leetcode292.markdown
+++ b/_posts/2016-10-14-leetcode292.markdown
@@ -3,23 +3,25 @@ layout:     post
 title:      "Leetcode 292"
 subtitle:   "Nim Game"
 date:       2016-10-14
-author:     "Jian Zhu"
-header-img: ""
+author:     "Zhu Jian"
+header-img: "img/leetcode-bg.jpg"
 tags:
     - Leetcode
     - Algorithm
 ---
 
 ## Nim Game
+
+
 #### 题目
+
 >You are playing the following Nim Game with your friend: There is a heap of stones on the table, each time one of you take turns to remove 1 to 3 stones. The one who removes the last stone will be the winner. You will take the first turn to remove the stones.  
 
 >Both of you are very clever and have optimal strategies for the game. Write a function to determine whether you can win the game given the number of stones in the heap.  
 
 >For example, if there are 4 stones in the heap, then you will never win the game: no matter 1, 2, or 3 stones you remove, the last stone will always be removed by your friend.
 
-#### 解题思路
->
+#### 解题思路  
 * n ∈ [1, 2, 3]: 先手胜
 * n ∈ [4]: 无论先手的人如何选择，后手的人总能转换成[1, 2, 3]的情况，后手胜
 * n ∈ [5, 6, 7]: 先手的人通过分别取走[1, 2，3]颗石头，变成n = 4的情况，先手胜
