Fix a little bug, 2016-7-4

--- a/_posts/2017-7-4-网络编程学习0.markdown
+++ b/_posts/2017-7-4-网络编程学习0.markdown
@@ -20,4 +20,4 @@ tags:
 ***  
 
 #### 目前进度 ####  
-昨天花时间阅读了陈硕写的《谈一谈网络编程学习经验》PDF，对网络编程的所需知识，各种类库，基本概念，网络编程的注意点有个感性的认知，但是还很朦胧（就是你让我讲讲收获，我突然好想一句话都说不出来）。然后，看了《Beej's Guide to Network Programming》，还处于前言部分。anyway，还是需要再多读写书籍，今天就流水账记到这里。
+昨天花时间阅读了陈硕写的《谈一谈网络编程学习经验》PDF，对网络编程的所需知识，各种类库，基本概念，网络编程的注意点有个感性的认知，但是还很朦胧（就是你让我讲讲收获，我突然好像一句话都说不出来）。然后，看了《Beej's Guide to Network Programming》，还处于前言部分。anyway，还是需要再多读写书籍，今天就流水账记到这里。
